<resources>
    <string name="app_name">Book Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_all_books">Show All Books</string>
    <string name="find_book_using_type">Find Book Using Type</string>
    <string name="find_book_using_author">Find Book Using Author</string>
    <string name="search_books">Search Books</string>
    <string name="by_author">By Author</string>
    <string name="by_book_name">By Book Name</string>
    <string name="by_category">By Category</string>
    <string name="search">Search</string>
    <string name="book_name">Book Name :</string>
    <string name="author">Author :</string>
    <string name="category">Category :</string>
    <string name="contact">Contact :</string>
    <string name="profile">Profile :</string>
    <string name="help">Help :</string>
    <string name="kaan_alpp_outlook_com">kaan_alpp@outlook.com</string>
    <string name="back">Back</string>
    <string name="help_text2">You can see all the books in the database by clicking \'show All Books\' on the main page. If you click on a book it will take you to the \'editBook\' page. On that page, you can edit the name of the book, delete the book, add and delete the book to your favorite books.for see your favorite books, you should click on the \'search book\' button on the main page. It will redirect you to another page and if you press the \'show favorite book\' button on that page, it will show you. You can also search for books according to the feature you choose on the home page. For the book, you need to pay attention to the capital letters.</string>
</resources>