<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contactFragment"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contact"/>
        <item
            android:id="@+id/profileFragment"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/profile"/>
    </group>
    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/helpFragment"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"/>
        </menu>
    </item>
</menu>