<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigationDrawer.MainFragment">

    <Button
        android:id="@+id/allBooks"
        android:layout_width="215dp"
        android:layout_height="77dp"
        android:layout_marginTop="48dp"
        android:text="@string/show_all_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/search_books"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/search_books"
        app:layout_constraintEnd_toStartOf="@+id/search_group"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allBooks" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <RadioGroup
        android:id="@+id/search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allBooks">

        <RadioButton
            android:id="@+id/by_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_author">

        </RadioButton>

        <RadioButton
            android:id="@+id/by_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_category">

        </RadioButton>

        <RadioButton
            android:id="@+id/by_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_book_name">

        </RadioButton>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>